# vortex.modules.builtin.toolchains

./: CMakeLists.txt  README.md  build.sh  main.cpp  module.json
src/: module.cpp  module.h
src/instances/toolchainInstance/: ToolchainRenderInstance.cpp  ToolchainRenderInstance.h
src/instances/toolchainInstance/wins/: UI_AssetsViewer.cpp  UI_ContentWindow.cpp  UI_CurrentToolchainPreview.cpp  UI_FullBuild.cpp  UI_MainSettings.cpp  UI_ManualBuild.cpp  UI_ParameterWindow.cpp  UI_SnapshotUtility.cpp  UI_TasksEditor.cpp  UI_VolatileTasks.cpp
src/tasks/: CheckCompiler.h  CompilePackage.h  ConfigurePackage.h  CreateBuildEnv.h  CreateTemporaryUser.h  DeleteTemporaryUser.h  ExecuteTasklist.h  GiveToolchainToTemporaryUser.h  InstallPackage.h  MovePackageToDist.h  SetupDistEnvironment.h  UncompressDistPackage.h
